clusters/gitops-cluster/monitoring/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki-stack
spec: {}
status: {}
