clusters/gitops-cluster/monitoring/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: flux-system
spec:
  rules:
  - host: grafana.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
