clusters/gitops-cluster/monitoring/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: flux-system
spec:
  rules:
  - host: prometheus.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
